# RV32-CPU

./: .gitignore  .gitmodules  README.md  TODO.md  top_tb_behav.wcfg
constr/: constraints.xdc
fw/: CMakeLists.txt  compile.sh  main.c  vga_interface.c  vga_interface.h
fw/inc/: reg_map.h  vga_interface.h
fw/include/: io.h
fw/src/: io.c  main.c  vga_interface.c
fw/utils/: boot.ld  crt0.s
rtl/: alu.v  alu_control.v  alu_ops.vh  control_unit.v  core.v  counter.v  cpu.v  decode.v  execute.v  instr_fetch.v  mem_access.v  opcodes.vh  ram.v  reg_file.v  reg_map.vh  rom.v  rv_opcodes.vh  top.v  vga_driver.v  vga_memory.v  write_back.v
rtl/headers/: reg_map.vh
scripts/: compile.sh  gen_reg_map.py  line_break.py
sim/: alu_tb.sv  cpu_tb.sv  instr_fetch_tb.sv  instr_fetch_tb_behav.wcfg  mem_access_tb.sv  reg_file_tb.sv  top_tb.sv
